<resources>
    <string name="app_name">ToDo App</string>
    <string name="my_todo">Мои дела</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="new_todo">Что надо сделать…</string>
    <string name="priority">Важность</string>
    <string name="deadline">Сделать до</string>
    <string name="low_priority">Низкая</string>
    <string name="normal_priority">Нет</string>
    <string name="high_priority">!!Высокая</string>
    <string name="delete">Удалить</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="toolbar_subtitle">Выполнено — %1$d</string>
    <string name="title">Мои дела</string>
    <string name="delete_error">Не удалось удалить заметку!</string>
    <string name="save_error">Не удалось сохранить заметку!</string>
    <string name="get_error">Не удалось получить заметку!</string>
    <string name="update_error">Не удалось обновить заметку!</string>
    <string name="no_internet_error">Отсутсвует интернет подключение</string>
    <string name="network_error">Что-то пошло не так!</string>
    <string name="retry">Повторить</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="system_theme">Системная тема</string>
    <string name="notification_low_priority">Важность: Низкая</string>
    <string name="notification_normal_priority">Важность: Обычная</string>
    <string name="notification_high_priority">Важность: Высокая</string>
    <string name="reject_permissions">Выдать разрешение</string>
    <string name="without_notification">Продолжить без уведомлений</string>
    <string name="request_permissions">Для оповещения о делайнах, необходимо выдать разрешение.</string>
    <string name="notification_deadline_postpone_button">Отложить</string>
    <string name="notification_deadline_postpone_title">Перенос дедлайна</string>
    <string name="notification_deadline_postpone_text">Переносим задачу на сутки вперёд. Новое уведомление придёт ровно через 24 часа.</string>
    <string name="notification_deadline_postpone_error_title">Не удалось перенести дедлайн</string>
    <string name="notification_deadline_postpone_error_text">Нажмите на уведомление, чтобы попробовать ещё раз</string>
    <string name="notification_deadline_channel_name">Дедлайны задач</string>
</resources>