<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="6dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/dark_theme_button"
                android:layout_width="wrap_content"
                android:text="@string/dark_theme"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/night_theme"
                android:textSize="16sp"
                android:layout_marginVertical="6dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/light_theme_button"
                android:layout_width="wrap_content"
                android:text="@string/light_theme"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/light_theme"
                android:textSize="16sp"
                android:layout_marginVertical="6dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/system_theme_button"
                android:layout_width="wrap_content"
                android:text="@string/system_theme"
                android:drawableLeft="@drawable/settings"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:layout_marginVertical="6dp"
                />

        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>

