<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_add"
        android:layout_width="match_parent"
        android:background="@color/back_light_primary"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="false"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/cancel_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:src="@drawable/close" />

            <TextView
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/save"
                android:textAppearance="@style/pageTitle"
                android:textColor="@color/color_light_blue"
                android:textSize="14sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:animateLayoutChanges="true">

            <EditText
                android:id="@+id/todo_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:elevation="2dp"
                android:gravity="start"
                android:hint="@string/new_todo"
                android:inputType="textMultiLine"
                android:minHeight="120dp"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/priority_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/priority"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todo_edit" />

            <TextView
                android:id="@+id/change_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/normal_priority"
                android:textColor="@color/label_light_tertiary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priority_text" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/change_priority" />

            <TextView
                android:id="@+id/deadline_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/deadline"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/deadline_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/color_light_blue"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deadline_text" />

            <Switch
                android:id="@+id/switch_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:theme="@style/SCBSwitch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/switch_button" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/del_img"
                android:layout_width="12dp"
                android:layout_height="15dp"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:src="@drawable/del_selector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_long"
                app:tint="@color/label_light_tertiary" />

            <TextView
                android:id="@+id/del_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginStart="6dp"
                android:enabled="false"
                android:text="@string/delete"
                android:textColor="@drawable/red_selector"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/del_img"
                app:layout_constraintTop_toBottomOf="@id/divider_long" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/progress_add_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone"
        android:background="@color/back_light_primary"
        >
        <ProgressBar
            style="?android:attr/progressBarStyleInverse"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@color/back_light_primary" />
    </FrameLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>